--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ env: FF_ROOT=$TRAVIS_BUILD_DIR FF_VERSION=3.3
 
 script: ./build.sh
 
-after_success: curl --ftp-create-dirs -T "$FF_ROOT/ffmpeg-$FF_VERSION.zip" -u $FTP_USER:$FTP_PASS ftp://$FTP_SERVER/build/osx/ffmpeg-${FF_VERSION}_`date +%Y%m%d`.zip
+after_success: curl --ftp-create-dirs -T "$FF_ROOT/ffmpeg-$FF_VERSION.zip" -u $FTP_USER:$FTP_PASS ftp://$FTP_SERVER/build/osx/ffmpeg-${FF_VERSION}_`date +%Y%m%d%H%M%S`.zip
