multi CPU support

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: c
 
 os: osx
 
-env: FF_ROOT=$TRAVIS_BUILD_DIR FF_VERSION=3.3
+env: FF_ROOT=$TRAVIS_BUILD_DIR FF_VERSION=3.3 FF_CPU=2
 
 script: ./build.sh
 
