cache cmake in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,8 @@ os: osx
 
 env: FF_ROOT=$TRAVIS_BUILD_DIR FF_VERSION=3.3 FF_CPU=2
 
+cache:
+  directories:
+    - $FF_ROOT/cmake
+
 script: ./build.sh
