--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ cache:
     - $FF_ROOT/cmake
 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -q && sudo apt-get install -y gcc-4.8; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -q && sudo apt-get install -y gcc-4.8 && gcc --version && clang++ --version; fi
 
 script: ./build.sh
