--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ cache:
     - $FF_ROOT/cmake
 
 before_script:
-  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX="g++-4.9" CC="gcc-4.9"; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" ]; then export CXX="g++-4.9" CC="gcc-4.9"    ; fi
+  - if [ "$TRAVIS_OS_NAME" = "osx"   ]; then brew update && brew install coreutils; fi
 
 script: ./build.sh
