--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
     packages:
       - gcc-4.9
       - g++-4.9
+      - gperf
 
 env: FF_ROOT=$TRAVIS_BUILD_DIR FF_VERSION=3.4.2 FF_CPU=2
 
